--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,28 @@
     --color-background: #090909;
 
     font-size: 62.5%;
+
+    /* Entire scrollbar */
+    ::-webkit-scrollbar {
+      width: 12px; /* Width of the vertical scrollbar */
+      height: 12px; /* Height of the horizontal scrollbar */
+    }
+
+    /* Scrollbar track (background) */
+    ::-webkit-scrollbar-track {
+      background:radial-gradient(var(--color-secondary) 50%,var(--color-background) 90%); /* Background color */
+    }
+
+    /* Scrollbar thumb (draggable part) */
+    ::-webkit-scrollbar-thumb {
+      background-color: var(--color-primary); /* Thumb color */
+      border-radius: 10px; /* Rounded corners */
+    }
+
+    /* Thumb hover effect */
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #888; /* Darker color when hovered */
+    }
   }
 }
 
